issues with spacing when zooming in

--- a/src/client/front-main/src/App.css
+++ b/src/client/front-main/src/App.css
@@ -1,6 +1,10 @@
 html, #root{
-    background-color: beige;
+    background-color: blue;
+    margin: 0;
+    padding: 0;
+    border: none;
 }
+
 
 .blockContainer{
     display: flex;
@@ -8,13 +12,14 @@ html, #root{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    box-sizing: border-box;
 }
 
 .block{
     margin-top: 20px;
     width: 800px;
     height: 40px;
-    background-color: green;
+    background-color: pink;
     border-radius: 5px 5px 0 0;
 }
 
@@ -29,20 +34,10 @@ html, #root{
 }
 
 
-:root {
-    --primary: orange;
-    --secondary: #ff5252;
-    --background: #eee;
-    --highlight: #ffda79;
-    /* Theme color */
-    --theme: var(--primary);
-  }
-
 
 /* Core styles/functionality */
 .tab{
     width: 800px;
-    max-height: 100vh;
 }
 .tab input {
     position: absolute;
@@ -53,40 +48,38 @@ html, #root{
   .tab__content {
     overflow: hidden;
     transition: all 0.35s;
-    background-color: aquamarine;
     display: flex;
     justify-content: center;
   }
  
-  
-  
 
   .tab__label,
   .tab__close {
     display: flex;
-    color: white;
-    background: var(--theme);
     cursor: pointer;
+    
   }
   .tab__label {
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
-    height: 30px;
+    margin: 0;
+    height: 40px;
+    border-radius:0 0 5px 5px;
+    background-color: pink;
   }
   .tab__label::after {
     content: "\276F";
     text-align: center;
     transform: rotate(90deg);
     transition: all 0.35s;
+
   }
   .tab input:checked + .tab__label::after {
     transform: rotate(270deg);
   }
-  .tab__content p {
-    margin: 0;
-    padding: 1rem;
-  }
+ 
+  
   .tab__close {
     justify-content: flex-end;
     padding: 0.5rem 1rem;
@@ -115,17 +108,21 @@ html, #root{
   height: 100%;
   font-family: 'Courier New', Courier, monospace;
   font-size: 1rem;
-  border-radius: 0px;
-  word-spacing: 1px;
-  border-radius: 0 0 2px 2px;
-  border: none;
-  background: grey;
+  font-weight: 400;
+  border-radius: 0 0 5px 5px;
+  border:  none;
+  background: pink;
+  resize: none;
 }
 .tab__content{
-  border-radius: 0 0 2px 2px;
+  border-radius: 0 0 5px 5px;
   width: 800px;
 }
 textarea:focus{
   outline: none;
 }
 
+.block-tab{
+  display: flex;
+  flex-direction: column;
+}
